samples/_failures_safe/1761433988_72412b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fad10fb6.c: In function ‘main’:
./samples/SAFE/__tmp_fad10fb6.c:133:24: error: missing terminating " character
  133 |                 printf("Added: %s %s
      |                        ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fad10fb6.c:133:17: error: expected expression at end of input
  133 |                 printf("Added: %s %s
      |                 ^~~~~~
./samples/SAFE/__tmp_fad10fb6.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fad10fb6.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fad10fb6.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fad10fb6.c:133:17: error: expected declaration or statement at end of input
